--- a/.github/workflows/codequality.yml
+++ b/.github/workflows/codequality.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install pylint
-      run: pip install pylint
+      run: pip install pylint openpyxl
     - name: pylint code_quality
       run: pylint main.py --fail-under=8
